--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,5 +17,11 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <!-- Avoiding warning message -->
+    <script
+      type="text/javascript"
+      src="https://unpkg.com/default-passive-events"
+    ></script>
   </body>
 </html>
